--- a/View/MySidebarView.xaml
+++ b/View/MySidebarView.xaml
@@ -1,11 +1,9 @@
 <UserControl x:Class="MySidebarPlugin.MySidebarView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Height="Auto" Width="Auto">
-    <Grid Margin="5">
-        <TextBlock Text="Hello from MySidebarPlugin!" 
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   FontSize="16" />
-    </Grid>
+             xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
+             >
+  <Grid>
+    <wv2:WebView2 x:Name="MyWebView2" />
+  </Grid>
 </UserControl>
