--- a/GsPluginSettingsView.xaml
+++ b/GsPluginSettingsView.xaml
@@ -6,9 +6,20 @@
              mc:Ignorable="d"
              d:DesignHeight="400" d:DesignWidth="600">
     <StackPanel>
-        <TextBlock Text="Description for Option1:"/>
-        <TextBox Text="{Binding Settings.Option1}" />
-        <TextBlock Text="Description for Option2:"/>
-        <CheckBox IsChecked="{Binding Settings.Option2}"/>
+        <TextBlock Text="Your Playnite ID" FontSize="16" Foreground="White"/>
+        <TextBlock 
+           Foreground="White"
+           Background="#FF464141"
+           Height="25"
+           FontSize="14"
+           Margin="0,16,0,0"
+           Padding="5"
+           x:Name="IDTextBlock"
+           Cursor="Hand"
+           VerticalAlignment="Center"
+           HorizontalAlignment="Center"
+           MouseLeftButtonUp="TextBlock_MouseLeftButtonUp"/>
+
+
     </StackPanel>
 </UserControl>
