--- a/GsPluginSettingsView.xaml
+++ b/GsPluginSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="GsPlugin.GsPluginSettingsView"
+<UserControl x:Class="GsPlugin.GsPluginSettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -20,6 +20,6 @@
            HorizontalAlignment="Center"
            MouseLeftButtonUp="TextBlock_MouseLeftButtonUp"/>
 
-
+        <CheckBox x:Name="DarkModeCheckBox" Content="Dark Mode" Foreground="White" Checked="HandleCheck" Unchecked="HandleUnchecked" />
     </StackPanel>
 </UserControl>
