--- a/GsPluginSettingsView.xaml
+++ b/GsPluginSettingsView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:GsPlugin"
              mc:Ignorable="d"
              d:DesignHeight="400" d:DesignWidth="600">
     <UserControl.Resources>
@@ -32,8 +33,7 @@
         <TextBlock x:Name="ConnectionStatusTextBlock"
                    FontWeight="Bold"
                    Margin="0,0,0,10"/>
-
-        <Grid Margin="0,0,0,10">
+        <Grid x:Name="LinkingControlsGrid" Margin="0,0,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
