--- a/GsPluginSettingsView.xaml
+++ b/GsPluginSettingsView.xaml
@@ -1,3 +1,4 @@
+<!-- Plugin Settings View for GS (Game Scrobbler) Plugin -->
 <UserControl x:Class="GsPlugin.GsPluginSettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,33 +7,58 @@
              xmlns:local="clr-namespace:GsPlugin"
              mc:Ignorable="d"
              d:DesignHeight="400" d:DesignWidth="600">
+
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
-    </UserControl.Resources>
-    <StackPanel Margin="20">
-        <TextBlock Text="Your GS ID" FontSize="16" Foreground="White"/>
-        <TextBlock
-           Foreground="White"
-           Background="#FF464141"
-           Height="25"
-           FontSize="14"
-           Margin="0,16,0,0"
-           Padding="5"
-           x:Name="IDTextBlock"
-           Cursor="Hand"
-           MouseLeftButtonUp="TextBlock_MouseLeftButtonUp"/>
 
-        <TextBlock Text="Theme Selection:" Margin="0,20,0,10"/>
+        <!-- Styles for consistent UI -->
+        <Style x:Key="SectionHeaderStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Margin" Value="0,20,0,10"/>
+        </Style>
+
+        <Style x:Key="SubHeaderStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Margin" Value="0,10,0,5"/>
+        </Style>
+    </UserControl.Resources>
+
+    <StackPanel Margin="20">
+
+        <!-- Installation ID Section -->
+        <TextBlock Text="Your GS ID" Style="{StaticResource SectionHeaderStyle}"/>
+        <TextBlock x:Name="IDTextBlock"
+                   Foreground="White"
+                   Background="#FF464141"
+                   Height="25"
+                   FontSize="14"
+                   Margin="0,5,0,0"
+                   Padding="5"
+                   Cursor="Hand"
+                   ToolTip="Click to copy ID to clipboard"
+                   MouseLeftButtonUp="TextBlock_MouseLeftButtonUp"/>
+
+        <!-- Theme Selection Section -->
+        <TextBlock Text="Theme Selection" Style="{StaticResource SectionHeaderStyle}"/>
         <ComboBox x:Name="ThemeComboBox"
                   Width="150"
                   HorizontalAlignment="Left"
+                  Margin="0,5,0,0"
                   ItemsSource="{Binding AvailableThemes}"
                   SelectedItem="{Binding Settings.Theme, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <TextBlock Text="Account Linking" FontSize="16" Foreground="White" Margin="0,20,0,10"/>
+        <!-- Account Linking Section -->
+        <TextBlock Text="Account Linking" Style="{StaticResource SectionHeaderStyle}"/>
+
+        <!-- Connection Status -->
         <TextBlock x:Name="ConnectionStatusTextBlock"
                    FontWeight="Bold"
-                   Margin="0,0,0,10"/>
+                   FontSize="14"
+                   Margin="0,5,0,10"/>
+
+        <!-- Linking Controls -->
         <Grid x:Name="LinkingControlsGrid" Margin="0,0,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -45,26 +71,36 @@
                      Margin="0,0,10,0"
                      Padding="5"
                      Height="25"
-                     VerticalContentAlignment="Center"/>
+                     VerticalContentAlignment="Center"
+                     ToolTip="Enter your account linking token here"/>
 
             <Button Grid.Column="1"
                     x:Name="LinkAccountButton"
                     Content="Link Account"
                     Click="LinkAccount_Click"
-                    Padding="10,3"/>
+                    Padding="10,3"
+                    MinWidth="100"/>
         </Grid>
 
+        <!-- Link Status Message -->
         <TextBlock x:Name="LinkStatusTextBlock"
                    Foreground="Yellow"
                    FontSize="12"
-                   Margin="0,0,0,10"/>
+                   Margin="0,0,0,10"
+                   TextWrapping="Wrap"/>
 
-        <TextBlock Text="Privacy Controls" FontSize="16" Foreground="White" Margin="0,20,0,10"/>
+        <!-- Privacy Controls Section -->
+        <TextBlock Text="Privacy Controls" Style="{StaticResource SectionHeaderStyle}"/>
+
         <CheckBox Content="Disable error reporting (Sentry)"
                   Margin="0,5,0,5"
+                  ToolTip="Prevents sending crash reports and diagnostic data to improve the plugin"
                   IsChecked="{Binding Settings.DisableSentry, Mode=TwoWay}"/>
+
         <CheckBox Content="Disable game activity tracking (Scrobbling)"
                   Margin="0,5,0,5"
+                  ToolTip="Prevents scrobbling of your game playing activity"
                   IsChecked="{Binding Settings.DisableScrobbling, Mode=TwoWay}"/>
+
     </StackPanel>
 </UserControl>
