--- a/Localization/en_US.xaml
+++ b/Localization/en_US.xaml
@@ -1,5 +1,8 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
+
+    <!-- Settings UI strings -->
+    <sys:String x:Key="LOCGsPluginScrobblingDisabledWarning">You will not be able to benefit from features that rely on session data</sys:String>
 
 </ResourceDictionary>
