--- a/View/GsPluginSettingsView.xaml
+++ b/View/GsPluginSettingsView.xaml
@@ -1,10 +1,10 @@
 <!-- Plugin Settings View for GS (Game Scrobbler) Plugin -->
-<UserControl x:Class="GsPlugin.GsPluginSettingsView"
+<UserControl x:Class="GsPlugin.View.GsPluginSettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:GsPlugin"
+             xmlns:local="clr-namespace:GsPlugin.View"
              mc:Ignorable="d"
              d:DesignHeight="620" d:DesignWidth="620">
 
